# NAIS2

./: .gitignore  LICENSE  README.ja.md  README.ko.md  README.md  compile_log.txt  convert_tags.py  index.html  old_tauri.conf.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  v2.0.5_build.yml  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/python/: build_sidecar.bat  build_sidecar_macos.sh  tagger_server.py  tagger_server.spec
src-tauri/src/: lib.rs
src/components/character/: CharacterPromptDialog.tsx  CharacterSettingsDialog.tsx
src/components/fragments/: FragmentDialog.tsx
src/components/layout/: AnimatedNavBar.tsx  CustomTitleBar.tsx  HistoryPanel.tsx  MainLayout.tsx  PromptPanel.tsx  SmartToolsPanel.tsx  SourceImagePanel.tsx  (+1 more)
src/hooks/: useSceneGeneration.ts  useUpdateChecker.tsx
src/i18n/: index.ts
src/lib/: anlas-calculator.ts  metadata-parser.ts  tag-matcher.ts  utils.ts  wildcard-processor.ts
src/pages/: Library.tsx  MainMode.tsx  SceneDetail.tsx  SceneMode.tsx  Settings.tsx  ToolsMode.tsx  WebView.tsx
src/services/: gemini-service.ts  novelai-api.ts  smart-tools.ts
src/stores/: auth-store.ts  character-prompt-store.ts  character-store.ts  fragment-store.ts  generation-store.ts  layout-store.ts  library-store.ts  preset-store.ts  scene-store.ts  settings-store.ts  theme-store.ts  tools-store.ts  update-store.ts
src/styles/: globals.css
src/utils/: caret-coords.ts
(+33 files in other folders)
